--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.10",
     "@nestjs/platform-socket.io": "^11.0.10",
+    "@nestjs/schedule": "^6.0.0",
     "@nestjs/sequelize": "^11.0.0",
     "@nestjs/serve-static": "^5.0.2",
     "@nestjs/websockets": "^11.0.10",
