--- a/package.json
+++ b/package.json
@@ -28,9 +28,14 @@
     "@nestjs/platform-socket.io": "^11.0.10",
     "@nestjs/sequelize": "^11.0.0",
     "@nestjs/serve-static": "^5.0.2",
+    "@nestjs/throttler": "^6.4.0",
     "@nestjs/websockets": "^11.0.10",
     "cache-manager": "^6.4.0",
     "cache-manager-redis-store": "^3.0.1",
+    "compression": "^1.8.1",
+    "cookie-parser": "^1.4.7",
+    "csurf": "^1.11.0",
+    "helmet": "^8.1.0",
     "ioredis": "^5.5.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
@@ -49,6 +54,7 @@
     "@nestjs/testing": "^11.0.1",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
+    "@types/compression": "^1.8.1",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/multer": "^1.4.12",
