--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/websockets": "^11.0.10",
     "cache-manager": "^6.4.0",
     "cache-manager-redis-store": "^3.0.1",
+    "class-validator": "^0.14.2",
     "compression": "^1.8.1",
     "cookie-parser": "^1.4.7",
     "csurf": "^1.11.0",
